--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
   <body>
     <div class="container py-5">
       <div class="text-center">
-        <img src="/img/couple.png" class="img-fluid"
-          srcset="/img/couple.png, /img/couple@2x.png 2x">
+        <img src="img/couple.png" class="img-fluid"
+          srcset="img/couple.png, img/couple@2x.png 2x">
       </div>
 
       <div class="py-4"></div>
 
       <div class="text-center">
-        <img src="/img/content.png" class="img-fluid"
-          srcset="/img/content.png, /img/content@2x.png 2x">
+        <img src="img/content.png" class="img-fluid"
+          srcset="img/content.png, img/content@2x.png 2x">
       </div>
 
       <div class="py-2"></div>
 
       <div class="text-center">
         <a href="https://goo.gl/maps/oRcbAedqhv23WJ7V9" target="_blank">
-          <img src="/img/location.png" class="img-fluid"
-            srcset="/img/location.png, /img/location@2x.png 2x">
+          <img src="img/location.png" class="img-fluid"
+            srcset="img/location.png, img/location@2x.png 2x">
         </a>
       </div>
     </div>
